# quick-flash-gui

./: .prettierrc.json  README.md  next.config.mjs  package-lock.json  package.json
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/final/: page.tsx
src/app/final/success/: page.tsx
src/app/flash/final/: page.tsx
src/app/flash/final/success/: page.tsx
src/app/flash/firmware/: page.tsx
src/app/flash/storage/: page.tsx
src/app/flash/version/: page.tsx
src/components/: AddStorageDialog.tsx  DeleteConfirmation.tsx  DonutChart.tsx  EditStorageDialog.tsx  EditTargetDialog.tsx  FirmwareTable.tsx  HeaderWithFilter.tsx  Navbar.tsx  Stepper.tsx  StorageTable.tsx  SuccessMessage.tsx  TargetTable.tsx  ToastManager.tsx  VersionTable.tsx
src/components/shared/: BootstrapDialog.tsx  BootstrapDialogTitle.tsx  index.ts
src/styles/: IconButton.module.css
src/styles/theme/: lightTheme.tsx  lightThemeOptions.tsx
