[package]
name = "quick-flash-gui"
version = "0.3.0"
description = "GUI version of the quick-flash tool"
authors = ["manakjiri", "martinbaros", "MichalKlik", "sadyrdas"]
license = "MIT"
repository = "https://github.com/manakjiri/quick-flash-gui"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quick_flash_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
quick-flash = { git = "https://github.com/manakjiri/quick-flash.git", rev = "513f496a0283bd067d0ed56754984d8a20801780" }
